[b]Version 0.6.6[/b]:

(2008-12-06)
 * Bug #2399200: the downloaded subtitle filename was wrong if the video 
   filename contained a dot in the name (example: video.hdtv.avi created a 
   video_es.srt file instead of video.hdtv_es.avi). This is now fixed.

(2008-12-03)
 * Now the logs in the mplayer/smplayer log windows update in realtime.
 * The "MPlayer language" tab in the Advanced section in preferences has
   been removed. It's not necessary anymore, although if you've got a 
   mplayer which prints the output texts in a non-english language you'll need
   at least MPlayer SVN r28066.
 * Added two new options: "Auto zoom for 16:9" and "Auto zoom for 2.35:1".
   Those options zoom the image assuming the aspect ratio of the video image
   is the one specified in the option, even if that's not the actual aspect
   ratio. Useful for videos which include black borders (letterbox) in the 
   image, where the normal "Auto zoom" option will fail.

(2008-11-30)
 * New option for smplayer.ini: actions_to_run ([advanced] section).
   Specifies a list of actions (separated by spaces) which will be run every
   time a file is loaded. For instance "actions_to_run=auto_zoom compact true"
   will run the auto_zoom action and set the gui to compact mode. If the
   commandline option -actions is used too, the actions from commandline
   will be added to the end of the list.
   There's a limitation: the actions will be run only when a file is opened 
   and not when the mplayer process is restarted (e.g. you select an option in 
   the menus which requires to restart mplayer, like a video or audio filter).
   Note that allowing to run the actions after a restart of mplayer could
   lead to infinite recursion if any of the actions in the list needs to 
   restart mplayer.
 * Added a field in Preferences->Advanced to enter the list of actions to
   be run every time a file is opened.

(2008-11-27)
 * Added an option in Preferences->General to change the method to store